--- a/fcfs_eg.html
+++ b/fcfs_eg.html
@@ -160,7 +160,7 @@
     <div class="container">
         <div class="half">
         
-          <a href="http://localhost/webtec/login2.html" class="btn">Find solution for your question</a>
+          <a href="fcfs_cal.html" class="btn">Find solution for your question</a>
         </div>
     </div>
   </div>
