--- a/sjf_eg.html
+++ b/sjf_eg.html
@@ -138,7 +138,7 @@
     <br>
     <div class="container">
       <div class="half">
-        <a href="http://localhost/webtec/login2.html" class="btn">Find solution for your question</a>
+        <a href="sjf_calc.html" class="btn">Find solution for your question</a>
       </div>
     </div>
   </div>
