--- a/srtf_eg.html
+++ b/srtf_eg.html
@@ -126,7 +126,7 @@
     <br>
     <div class="container">
       <div class="half">
-        <a href="http://localhost/webtec/login3.html" class="btn">Find solution for your question</a>
+        <a href="srtf_calc.html" class="btn">Find solution for your question</a>
       </div>
     </div>
   </div>
